--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -52,6 +52,8 @@
                 </p:submenu>
                 <p:submenu label="Internal Warehouse Request Orders" styleClass="display:block" >
                     <p:menuitem value="Create Internal Warehouse Request" url="createinternalwo.xhtml"/>
+                    <p:menuitem value="View Incoming Internal Orders" url="viewincomingorders.xhtml"/>
+                    <p:menuitem value="View Outgoing Internal Orders" url="viewoutgoingorders.xhtml"/>
                 </p:submenu>
                 <p:submenu label="External Warehouse Request Orders" styleClass="display:block" >
                     <p:menuitem value="Create External Warehouse Request" url="createwarehouserequest.xhtml"/>
