--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
@@ -157,6 +157,13 @@
                             </p:cellEditor>
                         </p:column>
 
+                        <p:column  headerText="Created Date" filterBy="#{stock.createdDate}" filterMatchMode="contains">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{stock.createdDate}" /></f:facet>
+                                <f:facet name="input"><p:calendar id="createdDate" value="#{stock.createdDate}" /></f:facet>
+                            </p:cellEditor>
+                        </p:column>
+
                         <p:column style="width:48px">
                             <p:commandButton actionListener="#{stockViewEditManagedBean.deleteStock(stock)}" ajax="true" update=":datafield:totalQuantity :datafield:stockData" icon="ui-icon-trash"  >
                                 <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this stock?" icon="ui-icon-alert" />
