--- a/MerlionPortal/MerlionPortal-war/web/oes/customeranalysisdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/customeranalysisdetail.xhtml
@@ -21,52 +21,60 @@
         </ui:define>
 
         <ui:define name="left">
-                <p:menu styleClass="menu-width">
-                    <p:submenu label="Home" styleClass="display:block">
-                        <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
-                    </p:submenu>
-                    <p:submenu label="Product" styleClass="display:block">
-                        <p:menuitem value="Products" url="displayallproducts.xhtml" />
-                    </p:submenu>
+            <p:menu styleClass="menu-width">
+                <p:submenu label="Home" styleClass="display:block">
+                    <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
+                </p:submenu>
+                <p:submenu label="Product" styleClass="display:block">
+                    <p:menuitem value="Products" url="displayallproducts.xhtml" />
+                </p:submenu>
 
-                    <p:submenu label="Quotation" styleClass="display:block">
-                        <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
-                        <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
-                    </p:submenu>
-                    <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:submenu label="Orders" styleClass="display:block">
-                            <c:if test="#{dashboardBean.checkOESCanGeneratePO()|| dashboardBean.loginedUser.userType == 'superuser'}">
-                                <p:menuitem value="Create Order" url="pogeneration.xhtml" />
-                                <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
-                            </c:if>
-                            <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
-                                <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" /> 
-                                <p:menuitem value="Order Status" url="displayallso.xhtml" />
-                            </c:if>
-                            <c:if test="#{dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
-                                <p:menuitem value="Reject Order" url="returnorder.xhtml" />
-                                <p:menuitem value="Generate Invoice" url="orderswaitingforinvoice.xhtml" />
-
-                            </c:if>
-                        </p:submenu>
-                    </c:if>
-                    <p:submenu label="Payment" styleClass="display:block">
-                        <p:menuitem value="All invoice" url="allinvoice.xhtml" />
-                        <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
-                            <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
+                <p:submenu label="Quotation" styleClass="display:block">
+                    <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
+                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
+                </p:submenu>
+                <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="Orders" styleClass="display:block">
+                        <c:if test="#{dashboardBean.checkOESCanGeneratePO()|| dashboardBean.loginedUser.userType == 'superuser'}">
+                            <p:menuitem value="Create Order" url="pogeneration.xhtml" />
+                            <p:menuitem value="Retrieve Saved Order" url="retrievesavedorder.xhtml" />
                         </c:if>
+                        <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                            <p:menuitem value="All Purcahse Order" url="viewallpo.xhtml" /> 
+                            <p:menuitem value="Order Status" url="displayallso.xhtml" />
+                        </c:if>
+                        <c:if test="#{dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
+                            <p:menuitem value="Reject Order" url="returnorder.xhtml" />
+                            <p:menuitem value="Generate Invoice" url="orderswaitingforinvoice.xhtml" />
 
+                        </c:if>
                     </p:submenu>
-                    <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:submenu label="Reports" styleClass="display:block">
-                            <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
-                        </p:submenu>
+                </c:if>
+                <p:submenu label="Payment" styleClass="display:block">
+                    <p:menuitem value="All invoice" url="allinvoice.xhtml" />
+                    <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
                     </c:if>
-                </p:menu>
+                    <c:if test="#{dashboardBean.checkOESCanGenerateSO()||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:menuitem value="Confirm Payment" url="allwaitinginvoice.xhtml" />                           
+                    </c:if>
+                </p:submenu>
+                <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
+                    <p:submenu label="Reports" styleClass="display:block">
+                        <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
+                    </p:submenu>
+                </c:if>
+                
+            </p:menu>
         </ui:define>
         <ui:define name="right">
             <h:form>
-
+                <p:breadCrumb>
+                    <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
+                    <p:menuitem value="Report Dashboard" url="reportdashboard.xhtml" />
+                    <p:menuitem value="Customer Infor" url="customeranalysis.xhtml" />
+                    <p:menuitem value="Result" url="customeranalysisdetail.xhtml" />
+                </p:breadCrumb>
                 <p:fieldset legend="Selected Period" style="margin-bottom:20px">
                     <h:panelGrid columns="3" cellpadding="5">
                         <p:outputLabel value="Starting Date" />
