--- a/MerlionPortal/MerlionPortal-war/web/oes/reportdisplaysalessum.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/reportdisplaysalessum.xhtml
@@ -55,18 +55,27 @@
                     <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
                     </c:if>
-
+                    <c:if test="#{dashboardBean.checkOESCanGenerateSO()||dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:menuitem value="Confirm Payment" url="allwaitinginvoice.xhtml" />                           
+                    </c:if>
                 </p:submenu>
                 <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Reports" styleClass="display:block">
                         <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
                     </p:submenu>
                 </c:if>
+                
             </p:menu>
         </ui:define>
         <ui:define name="right">
             <h:form>
+                <p:breadCrumb>
+                    <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
+                    <p:menuitem value="Report Dashboard" url="reportdashboard.xhtml" />
+                    <p:menuitem value="Sales Trend" url="reportsalestrend.xhtml" />
+                    <p:menuitem value="Report" url="reportdisplaysalessum.xhtml" />
 
+                </p:breadCrumb>
                 <p:fieldset legend="Selected Period" style="margin-bottom:20px">
                     <h:panelGrid columns="3" cellpadding="5">
                         <p:outputLabel value="Starting Date" />
