--- a/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
@@ -22,6 +22,10 @@
         <!-- Override Content -->
         <ui:define name="content">
             <div class="container">
+                <p:breadCrumb>
+                    <p:menuitem value="Categories" url="#" />
+                    <p:menuitem value="Services" url="#" />
+                </p:breadCrumb>
                 <h2>Our Services</h2>
                 <div class="row">
                     <div class="col-md-4">
