--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -23,6 +23,10 @@
         <!-- Override Content -->
         <ui:define name="content">
             <div class="container">
+                <p:breadCrumb>
+                    <p:menuitem value="Categories" url="#" />
+                    <p:menuitem value="Packages" url="#" />
+                </p:breadCrumb>
                 <h2>Our Packages</h2>
                 <div class="row">
                     <div class="col-md-3">
