--- a/MerlionPortal/MerlionPortal-war/web/aboutus.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/aboutus.xhtml
@@ -21,8 +21,8 @@
         <ui:define name="content">
             <div class="container">
                 <p:breadCrumb>
-                    <p:menuitem value="Categories" url="#" />
-                    <p:menuitem value="Contact" url="#" />
+                    <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                    <p:menuitem value="Contact" url="${root}/aboutus.xhtml" />
                 </p:breadCrumb>
                 <div class="col-md-4">
                     <div class="thumbnail">
