--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -24,8 +24,8 @@
         <ui:define name="content">
             <div class="container">
                 <p:breadCrumb>
-                    <p:menuitem value="Categories" url="#" />
-                    <p:menuitem value="Packages" url="#" />
+                    <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                    <p:menuitem value="Packages" url="${root}/services.xhtml" />
                 </p:breadCrumb>
                 <h2>Our Packages</h2>
                 <div class="row">
