--- a/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/servicedescription.xhtml
@@ -23,8 +23,8 @@
         <ui:define name="content">
             <div class="container">
                 <p:breadCrumb>
-                    <p:menuitem value="Categories" url="#" />
-                    <p:menuitem value="Services" url="#" />
+                    <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                    <p:menuitem value="Contact" url="${root}/servicedescription.xhtml" />
                 </p:breadCrumb>
                 <h2>Our Services</h2>
                 <div class="row">
