--- a/MerlionPortal/MerlionPortal-war/web/feedback.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/feedback.xhtml
@@ -50,8 +50,11 @@
             </script>
             <h:form id="feedbackForm">
                 <f:event listener="#{feedbackBean.onLoad}" type="preRenderView" />
-                <c:set var="root" value="${request.contextPath}" />
                 <div class="container">
+                    <p:breadCrumb>
+                        <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                        <p:menuitem value="Feedback" url="${root}/feedback.xhtml" />
+                    </p:breadCrumb>
                     <div class="row spacing">
                         <div class="col-md-12">
                             <c:choose>
