--- a/MerlionPortal/MerlionPortal-war/web/admin/createrole.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createrole.xhtml
@@ -12,10 +12,14 @@
         <ui:param name="pageName" value="Create Role" />
         <!-- Override Content -->
         <ui:define name="content">
-            <c:set var="root" value="${request.contextPath}" />
             <script type="text/javascript" src="${root}/js/manageroles.js"></script>
             <h:form id="form" >
                 <div class="container">
+                    <p:breadCrumb>
+                        <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                        <p:menuitem value="Role" url="${root}/admin/createrole.xhtml" />
+                        <p:menuitem value="Create Role" url="${root}/admin/createrole.xhtml" />
+                    </p:breadCrumb>
                     <h2>Create Role</h2>
                     <div class="row spacing">
                         <div class="col-md-5">
@@ -184,7 +188,7 @@
                     </h:panelGroup>
                     <div class="row spacing">
                         <div class="col-md-10">
-                           <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                             <div class="pull-right">
                                 <p:commandButton value="Create Role" id="ajax" icon="ui-icon-check" update="form" actionListener="#{createRole.createRole}" styleClass="btn btn-success" />
                             </div>
