--- a/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
@@ -21,8 +21,12 @@
         
         <!-- Override Content -->
         <ui:define name="content">
-            <c:set var="root" value="${request.contextPath}" />
             <div class="container" >
+                <p:breadCrumb>
+                        <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                        <p:menuitem value="Role" url="${root}/admin/viewroles.xhtml" />
+                        <p:menuitem value="View Role" url="${root}/admin/viewroles.xhtml" />
+                    </p:breadCrumb>
                 <h2>View Roles</h2>
                     <h:form id="roleform" >
                         <!--Only should company selection if it is super user-->
