--- a/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
@@ -21,6 +21,11 @@
         <!-- Override Content -->
         <ui:define name="content">
             <div class="container" >
+                <p:breadCrumb>
+                    <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                    <p:menuitem value="User" url="${root}/admin/viewusers.xhtml" />
+                    <p:menuitem value="View Users" url="${root}/admin/viewusers.xhtml" />
+                </p:breadCrumb>
                 <h2>View Users</h2>
                 <h:form id="form">
 
