--- a/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
@@ -24,11 +24,9 @@
                         <div class="user-name title-font">${dashboardBean.loginedUser.firstName}</div>
                         <div class="user-company">${dashboardBean.loginedUser.companycompanyId.name}</div>
                         <br/>
-                        <span class="inbox"><a href="${request.contextPath}/admin/message.xhtml">Inbox</a></span>
+                        <span class="inbox"><a href="${request.contextPath}/admin/message.xhtml">Message</a></span>
                         <span class="viewlog"><a href="${request.contextPath}/viewsystemlog.xhtml">View log</a></span>
                     </div>
-
-
                 </div>
                 <hr />
                 <ul class="role-list">
