--- a/MerlionPortal/MerlionPortal-war/web/changepassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/changepassword.xhtml
@@ -24,6 +24,10 @@
                     }
                 </script>
                 <div class="container">
+                    <p:breadCrumb>
+                        <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                        <p:menuitem value="Change Password" url="${root}/changepassword.xhtml" />
+                    </p:breadCrumb>
                     <div class="row">
                         <div class="col-md-4">
                             <h2>Change Password</h2>
