--- a/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
@@ -19,6 +19,10 @@
         <ui:define name="content">
             <h:form>
                 <div class="container">
+                    <p:breadCrumb>
+                        <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                        <p:menuitem value="Forgot Password" url="${root}/resetpassword.xhtml" />
+                    </p:breadCrumb>
                     <div class="row">
                         <div class="col-md-10">
                             <h2>Reset Password</h2>
