--- a/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/user/dashboard.xhtml
@@ -26,7 +26,7 @@
                         <div class="user-name title-font">${dashboardBean.loginedUser.firstName}</div>
                         <div class="user-company">${dashboardBean.loginedUser.companycompanyId.name}</div>
                         <br/>
-                        <span class="inbox"><a href="${request.contextPath}/user/message.xhtml">Inbox</a></span>
+                        <span class="inbox"><a href="${request.contextPath}/user/message.xhtml">Message</a></span>
                         <span class="viewlog"><a href="${request.contextPath}/viewsystemlog.xhtml">View log</a></span>
                     </div>
 
