--- a/MerlionPortal/MerlionPortal-war/web/admin/message.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/message.xhtml
@@ -13,6 +13,7 @@
             <ui:define name="content">
                 <p:breadCrumb>
                     <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                    <p:menuitem value="Dashboard" url="${root}/admin/dashboard.xhtml" />
                     <p:menuitem value="Message" url="${root}/admin/message.xhtml" />
                 </p:breadCrumb>
                 <ui:include src="/templates/messaging/inbox.xhtml" />
