--- a/MerlionPortal/MerlionPortal-war/web/user/message.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/user/message.xhtml
@@ -12,6 +12,7 @@
             <ui:define name="content">
                 <p:breadCrumb>
                     <p:menuitem value="Categories" url="${root}/index.xhtml" />
+                    <p:menuitem value="Dashboard" url="${root}/user/dashboard.xhtml" />
                     <p:menuitem value="Message" url="${root}/user/message.xhtml" />
                 </p:breadCrumb>
                 <c:set var="root" value="${request.contextPath}" />
