userbox on top of menu styling

--- a/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
@@ -15,32 +15,7 @@
             </ui:insert>
         </ui:define>
 
-        <!-- Override Content -->
-        <ui:define name="left">
-            <div class="user-info">
-                <div class="row">
-                    <div class="avatar"></div>
-                    <div class="user-info-right">
-                        <div class="user-name title-font">${dashboardBean.loginedUser.firstName}</div>
-                        <div class="user-company">${dashboardBean.loginedUser.companycompanyId.name}</div>
-                        <br/>
-                        <span class="inbox"><a href="${request.contextPath}/admin/message.xhtml">Message</a></span>
-                        <span class="viewlog"><a href="${request.contextPath}/viewsystemlog.xhtml">View log</a></span>
-                    </div>
-                </div>
-                <hr />
-                <ul class="role-list">
-                    <c:if test="#{dashboardBean.loginedUser.userType == 'superuser'}">
-                        <li>Merlion Portal Superuser</li>
-                    </c:if>
-                    <c:forEach items="#{dashboardBean.loginedUser.userRoleList}" var="role" rendered="#{dashboardBean.loginedUser.userRoleList ne null}" >
-                        <li>#{role.roleName}</li>
-                    </c:forEach>
-                </ul>
-
-            </div>
-        </ui:define>
-
+        <!-- Override Right Container -->
         <ui:define name="right">
             <div class="tile-area">
                 <div class="row">
