--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewoperator.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewoperator.xhtml
@@ -19,8 +19,8 @@
 
             </ui:insert>
         </ui:define>
-       <ui:define name="left">
- <p:menu>
+        <ui:define name="left">
+            <p:menu>
                 <p:submenu label ="Map">
                     <p:submenu label="Node" >
                         <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
@@ -95,7 +95,7 @@
                     <p:panelGrid>
                         <p:row>
                             <p:column>
-                                <p:outputLabel for="operatorName" style="font-weight: bold" value="Operator Name: " />
+                                <p:outputLabel for="operatorName" style="font-weight: bold" value="First Name: " />
                             </p:column>
                             <p:column>
                                 <p:inputText required="true" label="Operator Name: " requiredMessage="Operator Name is required." id="operatorName" value="#{tOperatorManagerBean.operatorName}">
@@ -103,17 +103,57 @@
                                 </p:inputText>
                             </p:column>                       
                         </p:row>
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="operatorLastName" style="font-weight: bold" value="Last Name: " />
+                            </p:column>
+                            <p:column>
+                                <p:inputText required="true" label="Operator Name: " requiredMessage="Operator Name is required." id="operatorName" value="#{tOperatorManagerBean.operatorLastName}">
+                                    <f:validateLength minimum="4" maximum="40" />
+                                </p:inputText>
+                            </p:column>                       
+                        </p:row>
+
+                        <p:row>
+                            <p:outputLabel for="opeartorGender" value="Gender" />
+                            <p:selectOneRadio id="operatorGender" value="#{tOperatorManagerBean.operatorGender}">
+                                <f:selectItem itemLabel="Male" itemValue="Xbox One" />
+                                <f:selectItem itemLabel="Female" itemValue="PS+" />
+                            </p:selectOneRadio>                           
+                        </p:row>  
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="emailAddress" style="font-weight: bold" value="Email Address: " />
+                            </p:column>
+                            <p:column>
+                                <p:inputText required="true" label="Email Address: " requiredMessage="Email address is required." id="operatorName" value="#{tOperatorManagerBean.emailaddress}">
+                                    <f:validateLength minimum="4" maximum="40" />
+                                </p:inputText>
+                            </p:column>                       
+                        </p:row>
 
                         <p:row>
                             <p:column>
-                                <h:outputLabel for="operatorGender" style="font-weight: bold" value="Gender:  " />
+                                <p:outputLabel for="password" style="font-weight: bold" value="Password: " />
                             </p:column>
                             <p:column>
-                                <p:inputText required="true" label="Gender:" requiredMessage="Gender is required." id="opertorGender" value="#{tOperatorManagerBean.operatorGender}">
-                                    <f:validateLength minimum="1" maximum="19" />
+                                <p:inputText required="true" label="Password: " requiredMessage="Password is required." id="operatorName" value="#{tOperatorManagerBean.password}">
+                                    <f:validateLength minimum="4" maximum="40" />
                                 </p:inputText>
-                            </p:column>                             
-                        </p:row>  
+                            </p:column>                       
+                        </p:row>
+
+
+                        <p:row>
+                            <p:column>
+                                <p:outputLabel for="contactNumber" style="font-weight: bold" value="Contact Number: " />
+                            </p:column>
+                            <p:column>
+                                <p:inputText required="true" label="Contact Number: " requiredMessage="Contact number is required." id="operatorName" value="#{tOperatorManagerBean.contactNumber}">
+                                    <f:validateLength minimum="4" maximum="40" />
+                                </p:inputText>
+                            </p:column>                       
+                        </p:row>
 
                         <p:row>
                             <p:column>
